--- a/config/settings.json
+++ b/config/settings.json
@@ -1,7 +1,7 @@
 {
   "SiteName": "iBlog",
-  "SiteDomain": "www.example.com",
-  "RecordNo": "浙ICP备XXX号",
+  "SiteDomain": "www.jsoncoding.com",
+  "RecordNo": "浙ICP备号",
   "LogoPath": "/images/zhr.jpg",
   "PageSize": "10",
   "ExpandMenu": "false",
